fix: Add lacking whitespace in docs sidebar header

--- a/_sass/open-project-mixins.scss
+++ b/_sass/open-project-mixins.scss
@@ -80,6 +80,10 @@
   > .nav-sidebar {
     padding-top: 50px;
 
+    > .sidebar-header, > section {
+      margin-bottom: 15px;
+    }
+
     > .sidebar-header {
       display: flex;
       flex-flow: row nowrap;
@@ -106,8 +110,6 @@
     }
 
     > section {
-      margin-bottom: 15px;
-
       > .section-title {
         font-size: 20px;
         font-weight: bold;
